<resources>
    <string name="app_name">Operaciones</string>
    <string name="titulo">TÍTULO</string>
    <string name="resultado">Resultado</string>
    <string name="primer_numero">Primer Numero</string>
    <string name="primernumero">Primer Número</string>
    <string name="segundo_numero">Segundo Número</string>
    <string name="calcular">Calcular</string>
    <string name="borrar">Borrar</string>
    <string name="mensaje_error_n1">Digite el numero uno</string>
    <string name="mensaje_error_n2">Digite el numero dos</string>
    <string name="sumar">+</string>
    <string name="restar">-</string>
    <string name="multiplicar">*</string>
    <string name="dividir">/</string>
    <string-array name="operaciones">
        <item>@string/sumar</item>
        <item>@string/restar</item>
        <item>@string/multiplicar</item>
        <item>@string/dividir</item>
    </string-array>
    <string name="operaciones">Operaciones</string>
    <string name="mensaje_error_tres">No puede hacer divisiones entre cero</string>
</resources>
